--- a/PIDev_java/src/UI/UI_User/UserAffiche.fxml
+++ b/PIDev_java/src/UI/UI_User/UserAffiche.fxml
@@ -75,5 +75,6 @@
             <Image url="@../../GUI/Icons/icons8_user_50px.png" />
          </image>
       </ImageView>
+      <ImageView fx:id="imgaffiche" fitHeight="106.0" fitWidth="169.0" layoutX="113.0" layoutY="300.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
