--- a/PIDev_java/src/UI/UI_User/UseChange.fxml
+++ b/PIDev_java/src/UI/UI_User/UseChange.fxml
@@ -48,13 +48,14 @@
                   <Label fx:id="checkprenom" layoutX="18.0" layoutY="69.0" />
                </children>
             </Pane>
-            <Pane layoutX="145.0" layoutY="347.0" prefHeight="66.0" prefWidth="518.0" style="-fx-background-color: #0000;">
+            <Pane layoutX="113.0" layoutY="347.0" prefHeight="66.0" prefWidth="591.0" style="-fx-background-color: #0000;">
                <children>
-                  <Label layoutX="23.0" layoutY="14.0" text="Changer mot de passe " />
-                  <PasswordField fx:id="oldpw" layoutX="30.0" layoutY="39.0" promptText="ancien mot de passe" />
-                  <PasswordField fx:id="nvpw" layoutX="213.0" layoutY="38.0" promptText="nouveau mot de passe" />
-                  <Button layoutX="402.0" layoutY="37.0" mnemonicParsing="false" onMouseClicked="#changePW" prefHeight="25.0" prefWidth="88.0" style="-fx-background-color: #9b2938;" text="OK" textFill="WHITE" />
+                  <Label layoutX="4.0" layoutY="14.0" text="Changer mot de passe " />
+                  <PasswordField fx:id="oldpw" layoutX="13.0" layoutY="39.0" prefHeight="25.0" prefWidth="129.0" promptText="ancien mot de passe" />
+                  <PasswordField fx:id="nvpw" layoutX="155.0" layoutY="39.0" prefHeight="25.0" prefWidth="129.0" promptText="nouveau mot de passe" />
+                  <Button layoutX="447.0" layoutY="39.0" mnemonicParsing="false" onMouseClicked="#changePW" prefHeight="25.0" prefWidth="88.0" style="-fx-background-color: #9b2938;" text="OK" textFill="WHITE" />
                   <Label fx:id="checkpw" layoutX="30.0" layoutY="63.0" />
+                  <PasswordField fx:id="nvpwverif" layoutX="296.0" layoutY="39.0" prefHeight="25.0" prefWidth="129.0" promptText="verifier nouveau mdp" />
                </children>
             </Pane>
             <Pane layoutY="-1.0" prefHeight="437.0" prefWidth="110.0" style="-fx-background-color: #9b2938;">
