--- a/PIDev_java/src/UI/UI_User/UserActiveCode.fxml
+++ b/PIDev_java/src/UI/UI_User/UserActiveCode.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Circle?>
@@ -18,7 +18,6 @@
             <Pane layoutX="191.0" layoutY="115.0" prefHeight="206.0" prefWidth="374.0" style="-fx-background-color: #0000;">
                <children>
                   <Label fx:id="check" layoutX="118.0" layoutY="91.0" prefHeight="17.0" prefWidth="142.0" />
-                  <PasswordField fx:id="txtcodeActive" layoutX="113.0" layoutY="124.0" />
                   <Label layoutX="-35.0" layoutY="-20.0" prefHeight="74.0" prefWidth="494.0" text="Activer votre compte">
                      <font>
                         <Font name="Georgia" size="53.0" />
@@ -27,6 +26,7 @@
                   <Label layoutX="39.0" layoutY="126.0" prefHeight="17.0" prefWidth="68.0" text="Le code :" />
                   <Button fx:id="verif" layoutX="282.0" layoutY="158.0" mnemonicParsing="false" onMouseClicked="#ActiveVerifier" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: #9b2938;" text="verifier code" textFill="WHITE" />
                   <Label layoutX="66.0" layoutY="77.0" prefHeight="17.0" prefWidth="320.0" text="S'il vous plait , ecrire le code envoyer" />
+                  <TextField fx:id="txtcodeActive" layoutX="107.0" layoutY="122.0" />
                </children>
             </Pane>
             <Pane prefHeight="472.0" prefWidth="117.0" style="-fx-background-color: #9b2938;">
