--- a/PIDev_java/src/UI/UI_User/UserReset.fxml
+++ b/PIDev_java/src/UI/UI_User/UserReset.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Circle?>
@@ -20,8 +19,6 @@
             <Pane layoutX="191.0" layoutY="115.0" prefHeight="206.0" prefWidth="374.0" style="-fx-background-color: #0000;">
                <children>
                   <Label fx:id="check" layoutX="114.0" layoutY="183.0" prefHeight="17.0" prefWidth="142.0" />
-                  <TextField fx:id="txtnvpwd" layoutX="114.0" layoutY="74.0" />
-                  <PasswordField fx:id="txtverifpwd" layoutX="113.0" layoutY="133.0" />
                   <Label layoutX="-35.0" layoutY="-20.0" prefHeight="74.0" prefWidth="494.0" text="Mot de passe oublier">
                      <font>
                         <Font name="Georgia" size="53.0" />
@@ -30,6 +27,8 @@
                   <Label layoutX="9.0" layoutY="75.0" prefHeight="17.0" prefWidth="88.0" text="nouveau mdp:" />
                   <Label layoutX="19.0" layoutY="136.0" prefHeight="17.0" prefWidth="88.0" text="verifier mdp:" />
                   <Button fx:id="log1" layoutX="286.0" layoutY="170.0" mnemonicParsing="false" onMouseClicked="#Actreset" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: #9b2938;" text="Reset" textFill="WHITE" />
+                  <PasswordField fx:id="txtnvpwd" layoutX="115.0" layoutY="71.0" />
+                  <PasswordField fx:id="txtverifpwd" layoutX="115.0" layoutY="131.0" />
                </children>
             </Pane>
             <Label layoutX="313.0" layoutY="348.0" text="pas encore memebre ? " />
