--- a/PIDev_java/src/UI/UI_User/UserResetPwd.fxml
+++ b/PIDev_java/src/UI/UI_User/UserResetPwd.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -21,8 +20,7 @@
                <children>
                   <Label fx:id="check" layoutX="118.0" layoutY="91.0" prefHeight="17.0" prefWidth="142.0" />
                   <Button fx:id="log" layoutX="282.0" layoutY="86.0" mnemonicParsing="false" onMouseClicked="#actEnvoyer" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: #9b2938;" text="envoyer" textFill="WHITE" />
-                  <TextField fx:id="txtemail" layoutX="114.0" layoutY="61.0" />
-                  <PasswordField fx:id="txtcode" layoutX="113.0" layoutY="133.0" />
+                  <TextField fx:id="txtemail" layoutX="114.0" layoutY="61.0" prefHeight="25.0" prefWidth="149.0" />
                   <Label layoutX="-35.0" layoutY="-20.0" prefHeight="74.0" prefWidth="494.0" text="Mot de passe oublier">
                      <font>
                         <Font name="Georgia" size="53.0" />
@@ -31,6 +29,7 @@
                   <Label layoutX="29.0" layoutY="65.0" prefHeight="17.0" prefWidth="68.0" text="Email :" />
                   <Label layoutX="19.0" layoutY="136.0" prefHeight="17.0" prefWidth="88.0" text="Saisir le code:" />
                   <Button fx:id="log1" layoutX="282.0" layoutY="158.0" mnemonicParsing="false" onMouseClicked="#ActVerifier" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: #9b2938;" text="verifier code" textFill="WHITE" />
+                  <TextField fx:id="txtcode" layoutX="113.0" layoutY="132.0" />
                </children>
             </Pane>
             <Label layoutX="313.0" layoutY="348.0" text="pas encore memebre ? " />
