--- a/PIDev_java/src/UI/UI_formation/video_detail.fxml
+++ b/PIDev_java/src/UI/UI_formation/video_detail.fxml
@@ -3,15 +3,17 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.net.URL?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.web.WebView?>
 
-<AnchorPane id="AnchorPane" prefHeight="548.0" prefWidth="909.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_formation.Video_detailController">
+<AnchorPane id="AnchorPane" prefHeight="646.0" prefWidth="884.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_formation.Video_detailController">
     <stylesheets>
         <URL value="@video_detail.css" />
     </stylesheets>
    <children>
-      <WebView fx:id="webView_Forma" layoutX="23.0" layoutY="45.0" prefHeight="491.0" prefWidth="875.0" />
-      <FontAwesomeIconView glyphName="CLOSE" layoutX="873.0" layoutY="30.0" onMouseClicked="#btn_close" size="30" wrappingWidth="12.428571701049805" />
-      <FontAwesomeIconView fx:id="id_back" glyphName="ARROW_CIRCLE_LEFT" layoutX="835.0" layoutY="30.0" onMouseClicked="#btn_back_list" size="30" />
+      <WebView fx:id="webView_Forma" layoutX="14.0" layoutY="140.0" prefHeight="491.0" prefWidth="875.0" />
+      <FontAwesomeIconView glyphName="CLOSE" layoutX="850.0" layoutY="30.0" onMouseClicked="#btn_close" size="30" wrappingWidth="12.428571701049805" />
+      <FontAwesomeIconView fx:id="id_back" glyphName="ARROW_CIRCLE_LEFT" layoutX="802.0" layoutY="30.0" onMouseClicked="#btn_back_list" size="30" />
+      <Pane layoutY="54.0" opacity="0.89" prefHeight="89.0" prefWidth="898.0" style="-fx-background-color: #ad0505;" />
    </children>
 </AnchorPane>
