trying with the design

--- a/PIDev_java/src/UI/UI_formation/AfficherFormation.fxml
+++ b/PIDev_java/src/UI/UI_formation/AfficherFormation.fxml
@@ -8,30 +8,35 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="900.0" style="-fx-background-color: #f7f3e9;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_formation.AfficherFormationController">
+<AnchorPane id="AnchorPane" prefHeight="643.0" prefWidth="897.0" style="-fx-background-color: #f7f3e9;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_formation.AfficherFormationController">
     <stylesheets>
         <URL value="@afficherformation.css" />
     </stylesheets>
    <children>
-      <Pane layoutX="265.0" layoutY="77.0" prefHeight="93.0" prefWidth="633.0" style="-fx-background-color: #ad0505;">
+      <Pane layoutX="265.0" layoutY="81.0" opacity="0.89" prefHeight="93.0" prefWidth="632.0" style="-fx-background-color: #ad0505;">
          <children>
-            <TextField fx:id="tfSearchForma" layoutX="342.0" layoutY="34.0" prefHeight="26.0" prefWidth="200.0" promptText="Recherche" />
-            <FontAwesomeIconView fill="#fffefe" glyphName="SEARCH" layoutX="563.0" layoutY="60.0" wrappingWidth="24.6328125" />
+            <TextField fx:id="tfSearchForma" layoutX="388.0" layoutY="32.0" prefHeight="26.0" prefWidth="200.0" promptText="Recherche" />
+            <FontAwesomeIconView fill="#fffefe" glyphName="SEARCH" layoutX="594.0" layoutY="50.0" wrappingWidth="24.6328125" />
+            <HBox alignment="CENTER" layoutX="8.0" layoutY="-5.0" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
+               <children>
+                  <FontAwesomeIconView fill="#2196f3" glyphName="PLUS_SQUARE" onMouseClicked="#btn_gotoAjouterForma" size="45" text="" wrappingWidth="13.911458015441895" />
+                  <FontAwesomeIconView fill="#00f676" glyphName="REFRESH" layoutX="10.0" layoutY="76.0" onMouseClicked="#btn_Refresh_Forma" size="45" wrappingWidth="11.911458015441895" />
+                  <FontAwesomeIconView fill="#455a64" glyphName="PRINT" onMouseClicked="#btn_print_formation" size="45" />
+               </children>
+            </HBox>
          </children>
       </Pane>
       <AnchorPane layoutY="-2.0" prefHeight="650.0" prefWidth="267.0" style="-fx-background-color: #ad0505;">
          <children>
             <VBox layoutY="185.0" prefHeight="465.0" prefWidth="267.0" spacing="15.0">
                <children>
-                  <Button fx:id="btn_gotoFormations" graphicTextGap="10.0" mnemonicParsing="false" onAction="#btn_gotoFormations" opacity="0.7" prefHeight="68.0" prefWidth="267.0" style="-fx-background-color: #ad0505;" text="Nos Formatione" textFill="#e40e0e" textOverrun="WORD_ELLIPSIS">
+                  <Button fx:id="btn_gotoFormations" graphicTextGap="10.0" mnemonicParsing="false" onAction="#btn_gotoFormations" prefHeight="68.0" prefWidth="266.0" style="-fx-background-color: #ad0505;" text="Formation" textFill="#e40e0e" textOverrun="WORD_ELLIPSIS">
                      <font>
                         <Font size="35.0" />
                      </font>
@@ -41,27 +46,23 @@
                         <Font size="35.0" />
                      </font>
                   </Button>
-                  <Pane prefHeight="94.0" prefWidth="181.0">
-                     <children>
-                        <Label layoutX="75.0" layoutY="10.0" prefHeight="60.0" prefWidth="111.0" text="Recrutini" textFill="WHITE">
-                           <font>
-                              <Font size="26.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="75.0" layoutY="47.0" prefHeight="19.0" prefWidth="89.0" text="Agence D'emploi" textFill="WHITE">
-                           <font>
-                              <Font size="10.0" />
-                           </font>
-                        </Label>
-                        <FontAwesomeIconView fill="WHITE" glyphName="GG" layoutY="56.0" size="60" text="" wrappingWidth="55.57142639160156" />
-                     </children>
-                  </Pane>
                </children>
             </VBox>
-            <ImageView fitHeight="86.0" fitWidth="266.0" layoutX="4.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../Downloads/recruitini_logo.png" />
-               </image></ImageView>
+            <Pane layoutX="14.0" layoutY="27.0" prefHeight="120.0" prefWidth="253.0">
+               <children>
+                  <Label layoutX="75.0" layoutY="10.0" prefHeight="60.0" prefWidth="111.0" text="Recruitini" textFill="WHITE">
+                     <font>
+                        <Font size="26.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="75.0" layoutY="47.0" prefHeight="19.0" prefWidth="89.0" text="Agence D'emploi" textFill="WHITE">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Label>
+                  <FontAwesomeIconView fill="WHITE" glyphName="GG" layoutY="56.0" size="60" text="" wrappingWidth="55.57142639160156" />
+               </children>
+            </Pane>
          </children></AnchorPane>
       <TableView fx:id="TableFormation" layoutX="269.0" layoutY="173.0" prefHeight="474.0" prefWidth="625.0">
         <columns>
@@ -72,23 +73,16 @@
             <TableColumn fx:id="tab_gestion_id" prefWidth="77.59991455078125" style="-fx-alignment: center;" text="Gestion" />
         </columns>
       </TableView>
-      <Label layoutX="473.0" layoutY="20.0" prefHeight="47.0" prefWidth="217.0" text="Les formations">
-         <font>
-            <Font size="32.0" />
-         </font>
-      </Label>
       <HBox alignment="CENTER" layoutX="859.0" layoutY="36.599998474121094">
          <cursor>
             <Cursor fx:constant="CLOSED_HAND" />
          </cursor>
       </HBox>
-      <HBox alignment="CENTER" layoutX="315.0" layoutY="73.0" prefHeight="100.0" prefWidth="200.0" spacing="30.0">
-         <children>
-            <FontAwesomeIconView fill="#2196f3" glyphName="PLUS_SQUARE" onMouseClicked="#btn_gotoAjouterForma" size="45" text="" />
-            <FontAwesomeIconView fill="#00f676" glyphName="REFRESH" layoutX="10.0" layoutY="76.0" onMouseClicked="#btn_Refresh_Forma" size="45" wrappingWidth="11.911458015441895" />
-            <FontAwesomeIconView fill="#455a64" glyphName="PRINT" onMouseClicked="#btn_print_formation" size="45" />
-         </children>
-      </HBox>
       <FontAwesomeIconView glyphName="CLOSE" layoutX="865.0" layoutY="37.0" onMouseClicked="#btn_X_close" size="30" />
+      <Label layoutX="486.0" layoutY="16.0" prefHeight="26.0" prefWidth="219.0" text="Vos formations">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
